<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RegisterSale">

    <EditText
        android:id="@+id/txtClientSale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/client"
        app:layout_constraintBottom_toTopOf="@+id/txtProductNameSale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/txtProductNameSale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/productName"
        app:layout_constraintBottom_toTopOf="@+id/txtProductQuantitySale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtClientSale"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/txtProductQuantitySale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/productQuantity"
        app:layout_constraintBottom_toTopOf="@+id/btnAddProductSale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtProductNameSale"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnAddProductSale"
        android:layout_width="140sp"
        android:layout_height="50sp"
        android:text="@string/btnAdd"
        android:textSize="20sp"
        app:cornerRadius="10sp"
        app:layout_constraintBottom_toTopOf="@+id/txtViewTotalSale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtProductQuantitySale"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/txtViewTotalSale"
        android:layout_width="150sp"
        android:layout_height="40sp"
        android:text="@string/totalSale"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnRegisterSale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddProductSale"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnRegisterSale"
        android:layout_width="140sp"
        android:layout_height="50sp"
        android:backgroundTint="#4CAF50"
        android:text="@string/btnRegister"
        android:textSize="20sp"
        app:cornerRadius="10sp"
        app:layout_constraintBottom_toTopOf="@+id/btnListSale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewTotalSale"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnListSale"
        android:layout_width="120sp"
        android:layout_height="50sp"
        android:backgroundTint="#E91E63"
        android:text="@string/btnList"
        android:textSize="20sp"
        app:cornerRadius="10sp"
        app:layout_constraintBottom_toTopOf="@+id/btnBackSale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegisterSale"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnBackSale"
        android:layout_width="120sp"
        android:layout_height="50sp"
        android:backgroundTint="#3F51B5"
        android:text="@string/btnBack"
        android:textSize="20sp"
        app:cornerRadius="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnListSale"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>