<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RegisterClient">

    <EditText
        android:id="@+id/txtNitClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/nit"
        app:layout_constraintBottom_toTopOf="@+id/txtNameClient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/txtNameClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/txtPhoneClient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNitClient"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/txtPhoneClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/phone"
        app:layout_constraintBottom_toTopOf="@+id/btnRegisterClient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNameClient"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnRegisterClient"
        android:layout_width="140sp"
        android:layout_height="50sp"
        android:backgroundTint="#4CAF50"
        android:text="@string/btnRegister"
        android:textSize="20sp"
        app:cornerRadius="10sp"
        app:layout_constraintBottom_toTopOf="@+id/btnListClient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPhoneClient"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnListClient"
        android:layout_width="120sp"
        android:layout_height="50sp"
        android:backgroundTint="#E91E63"
        android:text="@string/btnList"
        android:textSize="20sp"
        app:cornerRadius="10sp"
        app:layout_constraintBottom_toTopOf="@+id/btnBackClient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegisterClient"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnBackClient"
        android:layout_width="120sp"
        android:layout_height="50sp"
        android:backgroundTint="#3F51B5"
        android:text="@string/btnBack"
        android:textSize="20sp"
        app:cornerRadius="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnListClient"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>