<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RegisterVehicle">

    <EditText
        android:id="@+id/txtBrandVehicle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/brand"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/txtModelVehicle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/txtModelVehicle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Modelo"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/txtPriceVehicle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBrandVehicle"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/txtPriceVehicle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/btnRegisterVehicle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtModelVehicle"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnRegisterVehicle"
        android:layout_width="140sp"
        android:layout_height="50sp"
        android:backgroundTint="#4CAF50"
        android:text="@string/btnRegister"
        android:textSize="20sp"
        app:cornerRadius="10sp"
        app:layout_constraintBottom_toTopOf="@+id/btnListVehicle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPriceVehicle"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnListVehicle"
        android:layout_width="120sp"
        android:layout_height="50sp"
        android:backgroundTint="#E91E63"
        android:text="@string/btnList"
        android:textSize="20sp"
        app:cornerRadius="10sp"
        app:layout_constraintBottom_toTopOf="@+id/btnBackVehicle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegisterVehicle"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnBackVehicle"
        android:layout_width="120sp"
        android:layout_height="50sp"
        android:backgroundTint="#3F51B5"
        android:text="@string/btnBack"
        android:textSize="20sp"
        app:cornerRadius="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnListVehicle"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>